== PngOptimizer Changelog ==

-----------------
2016-09-26 (2.5)

- misc: update code for GTK+ version
- misc: reorganize Windows code for multiplatform support

-----------------
2016-07-24 (2.4.3)

- misc: updated file structure for git first commit

-----------------
2014-06-08 (2.4.2)

- fixed: x64 build failed to open dialog boxes on Windows 8

-----------------
2014-05-25 (2.4.1)

- fixed: Windows XP compatibility for 32 bits build

-----------------
2014-05-18 (2.4)

- misc: updated source code for Visual Studio 2012
- misc: welcome message is centered and appears only when the log window is empty
- fixed: some errors found with VS2012 static analysis tool
- fixed: small UI problem in the screenshots dialog
- change: removed batch summary for single file

-----------------
2013-04-14 (2.3)

- new: multithreaded optimization for faster processing on multicore CPUs
- new: better optimization in some cases of greyscale images

- misc: updated ZLib 1.2.5 to 1.2.7 (compression library)

-----------------
2012-09-09 (2.2)

- new: support of the ".apng" file extension
- fixed: only lower case file extensions were managed. The extension case is not relevant anymore.

-----------------
2012-06-09 (2.1)

- new: option to keep or force pixel physical dimensions (pHYs chunk)
- new: better compatibility for old Windows versions (NT based)
- new: Windows Seven taskbar icon now shows progression of an optimization
- new: better automatic dialogs placement when near screen borders, near taskbar or with multiple monitors
- new: the list is now scrollable with the keyboard
- new: "Done" written at the end of multiple files optimization
- new: screenshot directory dialog can be resized

-----------------
2011-04-25 (2.0)

- new: support for APNG for both optimization and conversion (animated GIFs)
- new: x64 version
- new: PNG options moved to their own dialog window
- new: option to ignore animated GIFs
- new: option to keep original file date and time